Update .mailmap for icinga.com
fixes #12881

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Adam James <adam.james@transitiv.co.uk>
-Alexander A. Klimov <alexander.klimov@netways.de>
+Alexander A. Klimov <alexander.klimov@icinga.com>
 Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
@@ -11,7 +11,7 @@ Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
 Berthold Cogel <cogel@uni-koeln.de>
-Blerim Sheqa <blerim.sheqa@netways.de>
+Blerim Sheqa <blerim.sheqa@icinga.com>
 Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
@@ -33,12 +33,12 @@ Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
-Eric Lippmann <eric.lippmann@netways.de>
+Eric Lippmann <eric.lippmann@icinga.com>
 Evgeni Golov <evgeni@golov.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
-Gunnar Beutner <gunnar.beutner@netways.de>
+Gunnar Beutner <gunnar.beutner@icinga.com>
 Hannes Van de Vel <h@nnes.be>
 Heike Jurzik <icinga@huhnix.org>
 Hendrik Röder <hendrik.biz@gmail.com>
@@ -49,12 +49,12 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jason.young@velaspan.com>
 Jean-Louis Dupond <jean-louis@dupond.be>
-Jean-Marcel Flach <jean-marcel.flach@netways.de>
+Jean-Marcel Flach <jean-marcel.flach@icinga.com>
 Jens Schanz <mail@jensschanz.de>
 Jeremy Armstrong <lepubel@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
-Johannes Meyer <johannes.meyer@netways.de>
+Johannes Meyer <johannes.meyer@icinga.com>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
 Julian Brost <julian@0x4a42.net>
@@ -70,7 +70,7 @@ Malte Rabenseifner <mail@malte-rabenseifner.de>
 Manuel Reiter <reiter@csc.uni-frankfurt.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@graylog.com>
-Markus Frosch <lazyfrosch@icinga.org>
+Markus Frosch <markus.frosch@icinga.com>
 Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
 Mathieu Arnold <mat@mat.cc>
@@ -79,12 +79,12 @@ Matthaus Owens <matthaus@puppetlabs.com>
 Matthias Schales <black-dragon131@web.de>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
-Michael Friedrich <michael.friedrich@netways.de>
+Michael Friedrich <michael.friedrich@icinga.com>
 Michael Kraus <michael.kraus@consol.de>
 Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
 Nicolas Limage <github@xephon.org>
-Nicole Lang <nicole.lang@netways.de>
+Nicole Lang <nicole.lang@icinga.com>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Per von Zweigbergk <pvz@itassistans.se>
