--- a/AUTHORS
+++ b/AUTHORS
@@ -29,7 +29,7 @@ Daniel Helgenberger <daniel.helgenberger@m-box.de>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
-Dirk Goetz <dirk.goetz@netways.de>
+Dirk Goetz <dirk.goetz@icinga.com>
 Dolf Schimmel <dolf@transip.nl>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
@@ -63,7 +63,7 @@ Konstantin Kelemen <konstantin@kel.mn>
 Lars Engels <lars.engels@0x20.net>
 Lars Krüger <krueger-lars@web.de>
 Lee Clemens <java@leeclemens.net>
-Lennart Betz <lennart.betz@netways.de>
+Lennart Betz <lennart.betz@icinga.com>
 Louis Sautier <sautier.louis@gmail.com>
 Luca Lesinigo <luca@lm-net.it>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
