Update .mailmap for Thomas Widhalm
refs #12881

--- a/AUTHORS
+++ b/AUTHORS
@@ -106,7 +106,7 @@ Stephan Platz <github@paalsteek.de>
 Stephan Tesch <stephan@tesch.cx>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
-Thomas Widhalm <thomas.widhalm@netways.de>
+Thomas Widhalm <thomas.widhalm@icinga.com>
 Tim Hardeck <thardeck@suse.de>
 Timo Buhrmester <van.fstd@gmail.com>
 Tobias Birnbaum <osterd@gmx.de>
