--- a/AUTHORS
+++ b/AUTHORS
@@ -88,6 +88,7 @@ Nicole Lang <nicole.lang@icinga.com>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Per von Zweigbergk <pvz@itassistans.se>
+Peter Eckel <pe-icinga2@hindenburgring.com>
 Petr Ruzicka <petr.ruzicka@gmail.com>
 Phil Hutchinson <phil@volumedia.co.uk>
 Philipp Dallig <philipp.dallig@gmail.com>
