--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
 Berthold Cogel <cogel@uni-koeln.de>
 Blerim Sheqa <blerim.sheqa@icinga.com>
+Brendan Jurd <direvus@gmail.com>
 Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
