--- a/AUTHORS
+++ b/AUTHORS
@@ -80,6 +80,7 @@ Matthaus Owens <matthaus@puppetlabs.com>
 Matthias Schales <black-dragon131@web.de>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
+Micha Ahrweiler <me@schnitzi.net>
 Michael Friedrich <michael.friedrich@icinga.com>
 Michael Kraus <michael.kraus@consol.de>
 Mirco Bauer <meebey@meebey.net>
