--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Claudio Bilotta <bilottalove@gmail.com>
 Claudio Kuenzler <ck@claudiokuenzler.com>
 Conrad Clement <cclement@printeron.com>
 Daniel Helgenberger <daniel.helgenberger@m-box.de>
+Daniel Kesselberg <mail@danielkesselberg.de>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
