--- a/AUTHORS
+++ b/AUTHORS
@@ -89,6 +89,7 @@ Mirko Nardin <mirko.nardin@gmx.net>
 Nicolas Limage <github@xephon.org>
 Nicole Lang <nicole.lang@icinga.com>
 Pall Sigurdsson <palli-github@minor.is>
+Patrick Huy <frz@frz.cc>
 Paul Richards <paul@minimoo.org>
 Per von Zweigbergk <pvz@itassistans.se>
 Peter Eckel <pe-icinga2@hindenburgring.com>
