ITL: Implement inverse switch for snmp_interface CheckCommand
As for Interface Monitoring it is sometime needed to inverse the status (down -> OK, up -> NOT OK).

Can be configured via snmp_interface_inverse variable (boolean).

fixes #115

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -120,6 +120,7 @@ Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
 Thomas Widhalm <thomas.widhalm@icinga.com>
 Tim Hardeck <thardeck@suse.de>
+Tim Weippert <weiti@weiti.eu>
 Timo Buhrmester <van.fstd@gmail.com>
 Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
