--- a/AUTHORS
+++ b/AUTHORS
@@ -66,6 +66,7 @@ Joseph L. Casale <jcasale@activenetwerx.com>
 Julian Brost <julian@0x4a42.net>
 Jérôme Drouet <jerome.drouet@gmail.com>
 Konstantin Kelemen <konstantin@kel.mn>
+Kálmán Szalai - KAMI <kami911@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lars Krüger <krueger-lars@web.de>
 Lee Clemens <java@leeclemens.net>
