--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,7 @@ Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@icinga.com>
 Louis Sautier <sautier.louis@gmail.com>
 Luca Lesinigo <luca@lm-net.it>
+Lucas Fairchild-Madar <lucas.madar@gmail.com>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Manuel Reiter <reiter@csc.uni-frankfurt.de>
 Marcus van Dam <marcus@marcusvandam.nl>
