Update issue tracker to GitHub
fixes #4923

--- a/doc/icinga2.8
+++ b/doc/icinga2.8
@@ -88,7 +88,7 @@ Log fatal errors to the specified log file (only works in combination with
 .B "-d, --daemonize"
 Detach from the controlling terminal.
 .SH "REPORTING BUGS"
-Report bugs at <https://dev.icinga.com/>
+Report bugs at <https://github.com/Icinga/icinga2>
 .br
 Icinga home page: <https://www.icinga.com/>
 .SH COPYRIGHT
