ITL: check_icmp: add missing TTL attribute
fixes #4964

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,6 +41,7 @@ Evgeni Golov <evgeni@golov.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Georg Faerber <georg@riseup.net>
+Georg Haas <hax404foogit@hax404.de>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@icinga.com>
 Hannes Van de Vel <h@nnes.be>
