--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ Eric Lippmann <eric.lippmann@icinga.com>
 Evgeni Golov <evgeni@golov.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
+Georg Faerber <georg@riseup.net>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@icinga.com>
 Hannes Van de Vel <h@nnes.be>
