--- a/AUTHORS
+++ b/AUTHORS
@@ -23,6 +23,7 @@ Christian Birk <mail@birkc.de>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
+Christian Loos <cloos@netsandbox.de>
 Claudio Bilotta <bilottalove@gmail.com>
 Claudio Kuenzler <ck@claudiokuenzler.com>
 Conrad Clement <cclement@printeron.com>
