--- a/AUTHORS
+++ b/AUTHORS
@@ -43,6 +43,7 @@ Gaël Beaudoin <gaboo@gaboo.org>
 Georg Faerber <georg@riseup.net>
 Georg Haas <hax404foogit@hax404.de>
 Gerd von Egidy <gerd@egidy.de>
+Gerhardt Roman <roman.gerhardt@cbc-x.com>
 Gunnar Beutner <gunnar.beutner@icinga.com>
 Hannes Van de Vel <h@nnes.be>
 Heike Jurzik <icinga@huhnix.org>
