Fix lsb_release/sw_vers errors on NetBSD
fixes #4779

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
 Dirk Goetz <dirk.goetz@icinga.com>
 Dolf Schimmel <dolf@transip.nl>
+Edgar Fuß <ef@math.uni-bonn.de>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
 Eric Lippmann <eric.lippmann@icinga.com>
