--- a/AUTHORS
+++ b/AUTHORS
@@ -23,6 +23,7 @@ Bård Dahlmo-Lerbæk <bard.dahlmo-lerbaek@skatteetaten.no>
 Carlos Cesario <carloscesario@gmail.com>
 Carsten Köbke <carsten.koebke@gmx.de>
 Christian Birk <mail@birkc.de>
+Christian Gut <christian.gut@trendswm.de>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
@@ -44,7 +45,10 @@ Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
 Eric Lippmann <eric.lippmann@icinga.com>
 Evgeni Golov <evgeni@golov.de>
+Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
+Federico Cuello <federico.cuello@sociomantic.com>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
+Francesco Colista <fcolista@alpinelinux.org>
 Gaël Beaudoin <gaboo@gaboo.org>
 Georg Faerber <georg@riseup.net>
 Georg Haas <hax404foogit@hax404.de>
@@ -107,6 +111,7 @@ Michael Kraus <michael.kraus@consol.de>
 Mikesch-mp <mikesch-mp@koebbes.de>
 Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
+Nicolai <nbuchwitz@users.noreply.github.com>
 Nicolas Limage <github@xephon.org>
 Nicole Lang <nicole.lang@icinga.com>
 Niflou <dubuscyr@gmail.com>
@@ -155,8 +160,10 @@ Yannick Charton <tontonitch-pro@yahoo.fr>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zachary McGibbon <zachary.mcgibbon@gmail.com>
 Zoltan Nagy <abesto@abesto.net>
+ctrlaltca <ctrlaltca@gmail.com>
 gitmopp <mopp@gmx.net>
 krishna <gskrishna44@gmail.com>
 mcktr <mcktr55@gmail.com>
 mocruz <mocruz@theworkshop.com>
+pv2b <pvz@pvz.pp.se>
 Élie Bouttier <elie@bouttier.eu>
