--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ David Beck <techiscool@gmail.com>
 Denis <zaharden@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
 Dirk Goetz <dirk.goetz@icinga.com>
+Dirk Melchers <dirk@dirk-melchers.de>
 Dolf Schimmel <dolf@transip.nl>
 Edgar Fuß <ef@math.uni-bonn.de>
 Eduard Güldner <eduard.gueldner@gmail.com>
@@ -62,12 +63,13 @@ Heike Jurzik <icinga@huhnix.org>
 Hendrik Röder <hendrik.biz@gmail.com>
 Ian Kelling <ian@iankelling.org>
 Ildar Hizbulin <hizel@vyborg.ru>
+Irina Kaprizkina <ikapriz@gmail.com>
 James Pharaoh <james@pharaoh.uk>
 Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jason.young@velaspan.com>
+Jean Flach <jean-marcel.flach@icinga.com>
 Jean-Louis Dupond <jean-louis@dupond.be>
-Jean-Marcel Flach <jean-marcel.flach@icinga.com>
 Jens Schanz <mail@jensschanz.de>
 Jeremy Armstrong <lepubel@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
@@ -108,6 +110,7 @@ Michael <mcktr55@gmail.com>
 Michael Friedrich <michael.friedrich@icinga.com>
 Michael I <mcktr55@gmail.com>
 Michael Kraus <michael.kraus@consol.de>
+Michael Newton <miken32@gmail.com>
 Mikesch-mp <mikesch-mp@koebbes.de>
 Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
@@ -115,6 +118,8 @@ Nicolai <nbuchwitz@users.noreply.github.com>
 Nicolas Limage <github@xephon.org>
 Nicole Lang <nicole.lang@icinga.com>
 Niflou <dubuscyr@gmail.com>
+Noah Hilverling <noah.hilverling@icinga.com>
+Noah Hilverling <noah@hilverling.com>
 Pall Sigurdsson <palli-github@minor.is>
 Patrick Huy <frz@frz.cc>
 Paul Richards <paul@minimoo.org>
@@ -127,8 +132,10 @@ Philipp Dallig <philipp.dallig@gmail.com>
 Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
+Robin O'Brien <robin@labs.epiuse.com>
 Roland Hopferwieser <rhopfer@ica.jku.at>
 Roman Gerhardt <roman.gerhardt@cbc-x.com>
+Rudy Gevaert <rudy.gevaert@ugent.be>
 Rune Darrud <theflyingcorpse@gmail.com>
 Sam Kottler <shk@linux.com>
 Sebastian Brückner <mail@invlid.com>
@@ -138,9 +145,11 @@ Simon Murray <spjmurray@yahoo.co.uk>
 Simon Ruderich <simon@ruderich.org>
 Siyalrach Anton Thomas <sat@level8.dk>
 Stefan Triep <stefan@triep.net>
+Stefar77 <Stefar77@users.noreply.github.com>
 Stephan Platz <github@paalsteek.de>
 Stephan Tesch <stephan@tesch.cx>
 Steve McMaster <mcmaster@hurricanelabs.com>
+Strajan Sebastian Ioan <strajan.sebastian@yahoo.com>
 Thomas Gelf <thomas@gelf.net>
 Thomas Niedermeier <tniedermeier@thomas-krenn.com>
 Thomas Widhalm <thomas.widhalm@icinga.com>
@@ -160,10 +169,12 @@ Yannick Charton <tontonitch-pro@yahoo.fr>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zachary McGibbon <zachary.mcgibbon@gmail.com>
 Zoltan Nagy <abesto@abesto.net>
+bascarsija <bascarsija.dev@gmail.com>
 ctrlaltca <ctrlaltca@gmail.com>
 gitmopp <mopp@gmx.net>
 krishna <gskrishna44@gmail.com>
 mcktr <mcktr55@gmail.com>
 mocruz <mocruz@theworkshop.com>
 pv2b <pvz@pvz.pp.se>
+ryanohnemus <ryan.ohnemus@tradingtechnologies.com>
 Élie Bouttier <elie@bouttier.eu>
