--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,8 @@ Andrew Meyer <ameyer+secure@nodnetwork.org>
 Andy Grunwald <andygrunwald@gmail.com>
 Arnd Hannemann <arnd@arndnet.de>
 Assaf Flatto <assaf@aikilinux.com>
+Bård Dahlmo-Lerbæk <bard.dahlmo-lerbaek@skatteetaten.no>
+bascarsija <bascarsija.dev@gmail.com>
 Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.com>
@@ -19,7 +21,6 @@ Brendan Jurd <direvus@gmail.com>
 Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
-Bård Dahlmo-Lerbæk <bard.dahlmo-lerbaek@skatteetaten.no>
 Carlos Cesario <carloscesario@gmail.com>
 Carsten Köbke <carsten.koebke@gmx.de>
 Christian Birk <mail@birkc.de>
@@ -32,6 +33,7 @@ Christian Schmidt <github@chsc.dk>
 Claudio Bilotta <bilottalove@gmail.com>
 Claudio Kuenzler <ck@claudiokuenzler.com>
 Conrad Clement <cclement@printeron.com>
+ctrlaltca <ctrlaltca@gmail.com>
 Daniel Helgenberger <daniel.helgenberger@m-box.de>
 Daniel Kesselberg <mail@danielkesselberg.de>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
@@ -44,6 +46,7 @@ Dolf Schimmel <dolf@transip.nl>
 Edgar Fuß <ef@math.uni-bonn.de>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
+Élie Bouttier <elie@bouttier.eu>
 Eric Lippmann <eric.lippmann@icinga.com>
 Evgeni Golov <evgeni@golov.de>
 Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
@@ -55,6 +58,7 @@ Georg Faerber <georg@riseup.net>
 Georg Haas <hax404foogit@hax404.de>
 Gerd von Egidy <gerd@egidy.de>
 Gerhardt Roman <roman.gerhardt@cbc-x.com>
+gitmopp <mopp@gmx.net>
 Glauco Vinicius <gl4uc0@gmail.com>
 Gunnar Beutner <gunnar.beutner@icinga.com>
 Hannes Happle <info@h2-it.de>
@@ -72,16 +76,17 @@ Jean Flach <jean-marcel.flach@icinga.com>
 Jean-Louis Dupond <jean-louis@dupond.be>
 Jens Schanz <mail@jensschanz.de>
 Jeremy Armstrong <lepubel@gmail.com>
+Jérôme Drouet <jerome.drouet@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@icinga.com>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
 Julian Brost <julian@0x4a42.net>
-Jérôme Drouet <jerome.drouet@gmail.com>
 Kai Goller <kai.goller@netways.de>
-Konstantin Kelemen <konstantin@kel.mn>
 Kálmán Szalai - KAMI <kami911@gmail.com>
+Konstantin Kelemen <konstantin@kel.mn>
+krishna <gskrishna44@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lars Krüger <krueger-lars@web.de>
 Lee Clemens <java@leeclemens.net>
@@ -91,8 +96,8 @@ Luca Lesinigo <luca@lm-net.it>
 Lucas Fairchild-Madar <lucas.madar@gmail.com>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Manuel Reiter <reiter@csc.uni-frankfurt.de>
-Marcus van Dam <marcus@marcusvandam.nl>
 MarcusCaepio <MarcusCaepio@users.noreply.github.com>
+Marcus van Dam <marcus@marcusvandam.nl>
 Marianne Spiller <github@spiller.me>
 Marius Bergmann <marius@yeai.de>
 Marius Sturm <marius@graylog.com>
@@ -106,20 +111,19 @@ Matthias Schales <black-dragon131@web.de>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Micha Ahrweiler <me@schnitzi.net>
-Michael <mcktr55@gmail.com>
 Michael Friedrich <michael.friedrich@icinga.com>
-Michael I <mcktr55@gmail.com>
+Michael Insel <mcktr55@gmail.com>
 Michael Kraus <michael.kraus@consol.de>
 Michael Newton <miken32@gmail.com>
 Mikesch-mp <mikesch-mp@koebbes.de>
 Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
+mocruz <mocruz@theworkshop.com>
 Nicolai <nbuchwitz@users.noreply.github.com>
 Nicolas Limage <github@xephon.org>
 Nicole Lang <nicole.lang@icinga.com>
 Niflou <dubuscyr@gmail.com>
 Noah Hilverling <noah.hilverling@icinga.com>
-Noah Hilverling <noah@hilverling.com>
 Pall Sigurdsson <palli-github@minor.is>
 Patrick Huy <frz@frz.cc>
 Paul Richards <paul@minimoo.org>
@@ -129,6 +133,7 @@ Peter Eckel <pe-icinga2@hindenburgring.com>
 Petr Ruzicka <petr.ruzicka@gmail.com>
 Phil Hutchinson <phil@volumedia.co.uk>
 Philipp Dallig <philipp.dallig@gmail.com>
+pv2b <pvz@pvz.pp.se>
 Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
@@ -137,6 +142,7 @@ Roland Hopferwieser <rhopfer@ica.jku.at>
 Roman Gerhardt <roman.gerhardt@cbc-x.com>
 Rudy Gevaert <rudy.gevaert@ugent.be>
 Rune Darrud <theflyingcorpse@gmail.com>
+ryanohnemus <ryan.ohnemus@tradingtechnologies.com>
 Sam Kottler <shk@linux.com>
 Sebastian Brückner <mail@invlid.com>
 Sebastian Chrostek <sebastian@chrostek.net>
@@ -154,8 +160,8 @@ Thomas Gelf <thomas@gelf.net>
 Thomas Niedermeier <tniedermeier@thomas-krenn.com>
 Thomas Widhalm <thomas.widhalm@icinga.com>
 Tim Hardeck <thardeck@suse.de>
-Tim Weippert <weiti@weiti.eu>
 Timo Buhrmester <van.fstd@gmail.com>
+Tim Weippert <weiti@weiti.eu>
 Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
@@ -169,12 +175,3 @@ Yannick Charton <tontonitch-pro@yahoo.fr>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zachary McGibbon <zachary.mcgibbon@gmail.com>
 Zoltan Nagy <abesto@abesto.net>
-bascarsija <bascarsija.dev@gmail.com>
-ctrlaltca <ctrlaltca@gmail.com>
-gitmopp <mopp@gmx.net>
-krishna <gskrishna44@gmail.com>
-mcktr <mcktr55@gmail.com>
-mocruz <mocruz@theworkshop.com>
-pv2b <pvz@pvz.pp.se>
-ryanohnemus <ryan.ohnemus@tradingtechnologies.com>
-Élie Bouttier <elie@bouttier.eu>
